# fafu_arm_lerobot

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/inference/: opencv_camera.yaml
configs/train/: act_baseline.yaml  fafu_act_demo.yaml
docs/: DATA_COLLECTION.md  DATA_FORMAT.md  DEPLOYMENT.md  OPERATIONS.md  TRAINING.md  URDF.md
examples/: act_inference.py  kinematics_demo.py
policies/lerobot_policy_fafu_act_demo/: README.md  pyproject.toml
policies/lerobot_policy_fafu_act_demo/src/lerobot_policy_fafu_act_demo/: __init__.py  configuration_fafu_act_demo.py  modeling_fafu_act_demo.py  processor_fafu_act_demo.py
policies/lerobot_policy_fafu_act_demo/tests/: test_policy_smoke.py  test_residual_head.py
src/lerobot_robot_fafu_arm/: __init__.py  cli.py  compat.py  config.py  dataset_cli.py  follower.py  kinematics.py  leader.py  local_dataset.py  representation.py  sdk.py  wrs_viewer.py
src/lerobot_robot_fafu_arm/inference/: __init__.py  act.py  cli.py  manifest.py
src/lerobot_robot_fafu_arm/resources/: fafu_arm.cfg  fafu_arm.urdf
src/lerobot_robot_fafu_arm/training/: __init__.py  act.py  cli.py  common.py  config_file.py
tests/: test_act_checkpoint_integration.py  test_act_inference.py  test_dataset_cli.py  test_examples.py  test_follower.py  test_inference_cli.py  test_inference_manifest.py  test_kinematics.py  test_local_dataset.py  test_representation.py  test_sdk.py  test_training.py  test_training_config.py  test_training_manifest_integration.py
