[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_fafu_act_demo"
version = "0.1.0"
description = "Example FAFU ACT architecture plugin for LeRobot"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "FAFU Robotics" }]
dependencies = ["lerobot>=0.6,<0.7"]

[project.urls]
Repository = "https://github.com/FAFU-Robotics/fafu_arm_lerobot"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
